Thu Jan 13 20:34:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Preliminary menu support (very limited).

Fri Jan  7 11:03:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUmakefile: Set Gorm_PRINCIPAL_CLASS
	* Gorm.m: Do startup stuff in [-finishLaunching] and use the
	NSApplicationMain() function to run the app (as well-behaved apps do).

Wed Jan  5 17:00:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Palettes/0Menu/main.m: First cut at code for providing menus items
	on the palette.
	* GormWindowEditor.m: accept first mouse so we act immediately that
	the mouse is clicked anywhere in the window.
	* Palettes/1Window/main.m: Tidy attributes editor and add support
	for setting window title.

Tue Jan  4 17:42:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added 'miniaturize', 'close', and 'revert to saved' menu items and
	implemented their actions.

Tue Jan  4 12:13:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Various tidyups
	Somewhat improved documentation
	Added registration ddefaults stuff

Mon Jan  3 10:50:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Rewrote testing mechanism so that we test by creating an in-memory
	nib, and load that nib.  This way, the testing process has no effect
	on the original objects in the document we are working on.
	Also changed the editor api so that we have a deactivate method.
	Editors are deactivated on archiving and reactivated afterwords -
	this means that we no longer need to destroy all editors during
	archiving in order to stop them being included in the archive.

Thu Dec 23 16:32:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added generic object inspector.

Wed Dec 22 12:16:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Replaced the two NeXT images for sounds and classes.
	Improved drag and drop.

Tue Dec 21 15:30:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>
