@@ -1,3 +1,8 @@
+Fri Jan 14  9:34:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Palettes/OMenus/GormMenuEditor.m: ([mouseDown:]) support for
+	dragging menu items to rearrange their order.
+
 Thu Jan 13 20:34:00 2000 Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	Preliminary menu support (very limited).
